compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_actors_duplicate_actor_binding.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/actors/duplicate_actor_binding.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × duplicate local binding
   ╭─[tests/fixtures/diagnostics/actors/duplicate_actor_binding.ml:4:9]
 3 │     let x = 1;
 4 │     let x = 2;
   ·         ┬
   ·         ╰── `x` is already bound in this actor block
 5 │     receive { msg -> dbg(msg) }
   ╰────
  help: use a unique local name
